Pseudo code done

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="col-md-3">
                     <form>
                         <label for="inputSearch"><b>Search for a City:</b></label>
-                        <div class="input-group ">
+                        <div class="input-group mb-4">
                             <input type="search" class="form-control" id="search" placeholder="Search" aria-describedby="button-addon5">
                             <div class="input-group-append">
                                 <button id="button-addon5" type="submit" class="btn btn-primary">
@@ -34,24 +34,24 @@
                         </div>
                    </form>
                    <div class="btn-group-vertical btn-block">
-                    <button type="button" class="btn btn-outline-secondary btn-light text-left">Apple</button>
-                    <button type="button" class="btn btn-outline-secondary btn-light text-left">Samsung</button>
-                    <button type="button" class="btn btn-outline-secondary btn-light text-left">Sony</button>
+                    <button type="button" class="btn btn-outline-secondary btn-light text-left">Austin</button>
+                    <button type="button" class="btn btn-outline-secondary btn-light text-left">Chicago</button>
+                    <button type="button" class="btn btn-outline-secondary btn-light text-left">New York</button>
                   </div>
             </div>
 
             <div class="col-md-9">
                 <div class="row">
                     <div class= "container-fluid p-3 my-3 border">
-                    <h1>Atlanta (8/15/2019)</h1>
+                    <h1>Choose a city</h1>
                     <br>
-                    <p>Temperature: 90.9 F</p>
+                    <p>Temperature: </p>
                     <br>
-                    <p>Humidity: 41%</p>
+                    <p>Humidity: </p>
                     <br>
-                    <p>Wind Speed: 4.7 MPH</p>
+                    <p>Wind Speed: </p>
                     <br>
-                    <p>UV index: 9.49</p>
+                    <p>UV index: </p>
                     <br>
                     </div>
                 </div>
