--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             <div class="col-md-9">
                 <div class="row">
                     <div class= "container-fluid p-3 my-3 border">
-                    <h1 id=cityName>Choose a city</h1>
+                    <h1 id=cityName>Choose a city</h1>  
+                    <img  class= "d-none" id="wicon" src="" alt="Weather icon">
                     <br>
                     <p>Temperature: </p>
                     <br>
