--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                     <h1 id=cityName>Choose a city</h1>  
                     <img  class= "d-none" id="wicon" src="" alt="Weather icon">
                     <br>
-                    <p>Temperature: </p>
+                    <p id=tempMain>Temperature: </p>
                     <br>
-                    <p>Humidity: </p>
+                    <p id=humMain>Humidity: </p>
                     <br>
-                    <p>Wind Speed: </p>
+                    <p id=windMain>Wind Speed: </p>
                     <br>
-                    <p>UV index: </p>
+                    <p id=UVI>UV index: </p>
                     <br>
                     </div>
                 </div>
