UV index style fixed

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <br>
                     <p id=windMain>Wind Speed: </p>
                     <br>
-                    <p id=UVI>UV index: </p>
+                    <p >UV index: <span id=UVI></span></p>
                     <br>
                     </div>
                 </div>
