Dates for forecast done

--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@
             <div class="col-md-9">
                 <div class="row">
                     <div class= "container-fluid p-3 my-3 border">
-                    <h1 id=cityName>Choose a city</h1>  
-                    <img  class= "d-none" id="wicon" src="" alt="Weather icon">
+                        <div class="row">
+                            <h1 id=cityName>Choose a city</h1>
+                            <h1> ( </h1> 
+                            <h1 id=0></h1>
+                            <h1 >)</h1>
+                            <img  class= "d-none" id="wicon" src="" alt="Weather icon">
+                        </div>
                     <br>
                     <p id=tempMain>Temperature: </p>
                     <br>
@@ -59,46 +64,46 @@
                     <h1>5-Day Forecast:</h1>
                 </div>
                 <div class="row">
-                    <div class="col-sm-2 container p-3 my-3 bg-primary text-white">
-                        <h2>Choose a city</h1>
+                    <div class="col-sm-2 container-fluid p-3 my-3 bg-primary text-white">
+                        <h2 id=1 >Choose a city</h1>
                         <br>
-                        <p>ICON</p>
+                        <img  class= "d-none" id="i0" src="" alt="Weather icon">
                         <br>
                         <p>Temp: </p>
                         <br>
                         <p>Humidity:</p>
                     </div>
                     <div class="col-sm-2 container p-3 my-3 bg-primary text-white">
-                        <h2>Choose a city</h1>
+                        <h2 id=2>Choose a city</h1>
                             <br>
-                            <p>ICON</p>
-                            <br>
-                            <p>Temp: </p>
-                            <br>
-                            <p>Humidity: </p>
-                    </div>
-                    <div class="col-sm-2 container p-3 my-3 bg-primary text-white">
-                        <h2>Choose a city</h1>
-                            <br>
-                            <p>ICON</p>
+                            <img  class= "d-none" id="i1" src="" alt="Weather icon">
                             <br>
                             <p>Temp: </p>
                             <br>
                             <p>Humidity: </p>
                     </div>
                     <div class="col-sm-2 container p-3 my-3 bg-primary text-white">
-                        <h2>Choose a city</h1>
+                        <h2 id=3>Choose a city</h1>
                             <br>
-                            <p>ICON</p>
+                            <img  class= "d-none" id="i2" src="" alt="Weather icon">
                             <br>
                             <p>Temp: </p>
                             <br>
                             <p>Humidity: </p>
                     </div>
                     <div class="col-sm-2 container p-3 my-3 bg-primary text-white">
-                        <h2>Choose a city</h1>
+                        <h2 id =4>Choose a city</h1>
                             <br>
-                            <p>ICON</p>
+                            <img  class= "d-none" id="i3" src="" alt="Weather icon">
+                            <br>
+                            <p>Temp: </p>
+                            <br>
+                            <p>Humidity: </p>
+                    </div>
+                    <div class="col-sm-2 container p-3 my-3 bg-primary text-white">
+                        <h2 id=5>Choose a city</h1>
+                            <br>
+                            <img  class= "d-none" id="i4" src="" alt="Weather icon">
                             <br>
                             <p>Temp: </p>
                             <br>
