Unit of measurement added

--- a/index.html
+++ b/index.html
@@ -65,49 +65,49 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-2 container-fluid p-3 my-3 bg-primary text-white">
-                        <h2 id=1 >Choose a city</h1>
+                        <a id=1 >Choose a city</a>
                         <br>
                         <img  class= "d-none" id="i0" src="" alt="Weather icon">
                         <br>
-                        <p>Temp: </p>
+                        <p id="iTemp0">Temp: </p>
                         <br>
-                        <p>Humidity:</p>
+                        <p id="iHum0">Humidity:</p>
                     </div>
                     <div class="col-sm-2 container p-3 my-3 bg-primary text-white">
-                        <h2 id=2>Choose a city</h1>
+                        <a id=2>Choose a city</a>
                             <br>
                             <img  class= "d-none" id="i1" src="" alt="Weather icon">
                             <br>
-                            <p>Temp: </p>
+                            <p id="iTemp1">Temp: </p>
                             <br>
-                            <p>Humidity: </p>
+                            <p id="iHum1">Humidity: </p>
                     </div>
                     <div class="col-sm-2 container p-3 my-3 bg-primary text-white">
-                        <h2 id=3>Choose a city</h1>
+                        <a id=3>Choose a city</a>
                             <br>
                             <img  class= "d-none" id="i2" src="" alt="Weather icon">
                             <br>
-                            <p>Temp: </p>
+                            <p id="iTemp2">Temp: </p>
                             <br>
-                            <p>Humidity: </p>
+                            <p id="iHum2">Humidity: </p>
                     </div>
                     <div class="col-sm-2 container p-3 my-3 bg-primary text-white">
-                        <h2 id =4>Choose a city</h1>
+                        <a id =4>Choose a city</a>
                             <br>
                             <img  class= "d-none" id="i3" src="" alt="Weather icon">
                             <br>
-                            <p>Temp: </p>
+                            <p id="iTemp3">Temp: </p>
                             <br>
-                            <p>Humidity: </p>
+                            <p id="iHum3">Humidity: </p>
                     </div>
                     <div class="col-sm-2 container p-3 my-3 bg-primary text-white">
-                        <h2 id=5>Choose a city</h1>
+                        <a id=5>Choose a city</a>
                             <br>
                             <img  class= "d-none" id="i4" src="" alt="Weather icon">
                             <br>
-                            <p>Temp: </p>
+                            <p id="iTemp4">Temp: </p>
                             <br>
-                            <p>Humidity: </p>
+                            <p id="iHum4">Humidity: </p>
                     </div>
                 </div>
             </div>
