Local storage pull added

--- a/index.html
+++ b/index.html
@@ -32,11 +32,8 @@
                             </div>
                         </div>
                    </form>
-                   <div class="btn-group-vertical btn-block">
-                    <button type="button" class="btn btn-outline-secondary btn-light text-left">Austin</button>
-                    <button type="button" class="btn btn-outline-secondary btn-light text-left">Chicago</button>
-                    <button type="button" class="btn btn-outline-secondary btn-light text-left">New York</button>
-                  </div>
+                   <div class="btn-group-vertical btn-block" id=btn-container>
+                    </div>
             </div>
 
             <div class="col-md-9">
