Fixing date forecast bug

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
                         <div class="row">
                             <h1 id=cityName>Choose a city</h1>
                             <h1> ( </h1> 
-                            <h1 id=0></h1>
+                            <h1 id="currentDate"></h1>
                             <h1 >)</h1>
                             <img  class= "d-none" id="wicon" src="" alt="Weather icon">
                         </div>
                     <br>
-                    <p id=tempMain>Temperature: </p>
+                    <p id="tempMain">Temperature: </p>
                     <br>
-                    <p id=humMain>Humidity: </p>
+                    <p id="humMain">Humidity: </p>
                     <br>
-                    <p id=windMain>Wind Speed: </p>
+                    <p id="windMain">Wind Speed: </p>
                     <br>
-                    <p >UV index: <span id=UVI></span></p>
+                    <p >UV index: <span id="UVI"></span></p>
                     <br>
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-2 container-fluid p-3 my-3 bg-primary text-white">
-                        <a id=1 >Choose a city</a>
+                        <a id=0 >Choose a city</a>
                         <br>
                         <img  class= "d-none" id="i0" src="" alt="Weather icon">
                         <br>
@@ -71,7 +71,7 @@
                         <p id="iHum0">Humidity:</p>
                     </div>
                     <div class="col-sm-2 container p-3 my-3 bg-primary text-white">
-                        <a id=2>Choose a city</a>
+                        <a id=1>Choose a city</a>
                             <br>
                             <img  class= "d-none" id="i1" src="" alt="Weather icon">
                             <br>
@@ -80,7 +80,7 @@
                             <p id="iHum1">Humidity: </p>
                     </div>
                     <div class="col-sm-2 container p-3 my-3 bg-primary text-white">
-                        <a id=3>Choose a city</a>
+                        <a id=2>Choose a city</a>
                             <br>
                             <img  class= "d-none" id="i2" src="" alt="Weather icon">
                             <br>
@@ -89,7 +89,7 @@
                             <p id="iHum2">Humidity: </p>
                     </div>
                     <div class="col-sm-2 container p-3 my-3 bg-primary text-white">
-                        <a id =4>Choose a city</a>
+                        <a id =3>Choose a city</a>
                             <br>
                             <img  class= "d-none" id="i3" src="" alt="Weather icon">
                             <br>
@@ -98,7 +98,7 @@
                             <p id="iHum3">Humidity: </p>
                     </div>
                     <div class="col-sm-2 container p-3 my-3 bg-primary text-white">
-                        <a id=5>Choose a city</a>
+                        <a id=4>Choose a city</a>
                             <br>
                             <img  class= "d-none" id="i4" src="" alt="Weather icon">
                             <br>
