MPH updated to KPH and Kelvin updated to Celsius

--- a/index.html
+++ b/index.html
@@ -14,26 +14,25 @@
 <body>
     <div class="card text-center" style="background-color: black">
         <div class="card-body">
-            <h1 class="card-title" style='color: white;'><i class="fa fa-paper-plane" style="color:white"
-                    aria-hidden="true"></i>Weather Dashboard</h1>
+            <h1 class="card-title" style='color: white;'>Weather Dashboard</h1>
         </div>
     </div>
     <div class="container-fluid">
         <div class="row">   
             <div class="col-md-3">
-                    <form id="search-form">
-                        <label for="search-input"><b>Search for a City:</b></label>
-                        <div class="input-group mb-4">
-                            <input type="text" class="form-control" id="search-input" placeholder="Search" aria-describedby="button-addon5">
-                            <div class="input-group-append">
-                                <button id="search-btn" type="submit" class="btn btn-primary">
-                                    <i class="fa fa-search" aria-hidden="true"></i>
-                                </button>
-                            </div>
+                <form id="search-form">
+                    <label for="search-input"><b>Search for a City:</b></label>
+                    <div class="input-group mb-4">
+                        <input type="text" class="form-control" id="search-input" placeholder="Search" aria-describedby="button-addon5">
+                        <div class="input-group-append">
+                            <button id="search-btn" type="submit" class="btn btn-primary">
+                                <i class="fa fa-search" aria-hidden="true"></i>
+                            </button>
                         </div>
-                   </form>
-                   <div class="btn-group-vertical btn-block" id=btn-container>
                     </div>
+                </form>
+                <div class="btn-group-vertical btn-block" id=btn-container>
+                </div>
             </div>
 
             <div class="col-md-9">
