--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                 </form>
-                <div class="btn-group-vertical btn-block" id=btn-container>
+                <div class="btn-group-vertical btn-block" id="btn-container">
                 </div>
             </div>
 
